--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.3",
     "chart.js": "^2.9.4",
     "heroicons": "^2.0.18",
     "next": "14.0.1",
     "react": "^18",
     "react-data-table-component": "^7.5.4",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
