--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18",
-    "react-redux": "^9.0.4"
+    "react-redux": "^9.0.4",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
